src/main/java/com/example/coupon_api/Error/exceptions/DuplicateException.java
package com.example.coupon_api.Error.exceptions;

public class DuplicateException extends RuntimeException{
    public DuplicateException() {

    }

    public DuplicateException(String message) {
        super(message);
    }
}